--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "javascript-template-action",
-  "version": "0.0.0",
+  "name": "deployment-action",
+  "version": "0.1.0",
   "private": true,
   "description": "JavaScript template action",
   "main": "lib/main.js",
@@ -20,7 +20,8 @@
   "author": "YourNameOrOrganization",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.0.0"
+    "@actions/core": "^1.0.0",
+    "@actions/github": "^1.1.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.13",
