--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,9 @@ inputs:
     description: "Target url location"
   description:
     description: "Descriptive message about the deployment"
+  auto_merge:
+    description: Whether to attempt to auto-merge the default branch into the branch that the action is running on if set to `"true"`
+    default: false
   environment:
     description: "The name of the environment for the deployment"
     default: "production"
