update build process
to be in accordance with the typescript-action template repo

use ncc to build the action, bundling node deps,
and gitignore node_modules

--- a/action.yml
+++ b/action.yml
@@ -22,4 +22,4 @@ outputs:
     description: "The ID of the created deployment"
 runs:
   using: "node12"
-  main: "lib/main.js"
+  main: "dist/main.js"
