--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Dependency directory
+node_modules
+
 __tests__/runner/*
 
 # Rest pulled from https://github.com/github/gitignore/blob/master/Node.gitignore
@@ -89,3 +92,4 @@ typings/
 
 # DynamoDB Local files
 .dynamodb/
+node_modules
