--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "pack": "ncc build"
   },
   "repository": {
     "type": "git",
@@ -26,8 +27,9 @@
   "devDependencies": {
     "@types/jest": "^24.0.13",
     "@types/node": "^12.0.4",
-    "jest": "^24.8.0",
-    "jest-circus": "^24.7.1",
+    "@zeit/ncc": "^0.21.1",
+    "jest": "^25.1.0",
+    "jest-circus": "^25.1.0",
     "ts-jest": "^24.0.2",
     "typescript": "^3.5.1"
   }
