--- a/action.yml
+++ b/action.yml
@@ -22,4 +22,4 @@ outputs:
     description: "The ID of the created deployment"
 runs:
   using: "node12"
-  main: "dist/main.js"
+  main: "dist/index.js"
