--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "deployment-action",
   "version": "0.1.0",
   "private": true,
-  "description": "JavaScript template action",
+  "description": "Creates GitHub deployments",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "pack": "ncc build"
+    "package": "ncc build --source-map --license LICENSE"
   },
   "repository": {
     "type": "git",
@@ -18,19 +18,19 @@
     "node",
     "setup"
   ],
-  "author": "YourNameOrOrganization",
+  "author": "Chris Norman",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.2.6",
-    "@actions/github": "^4.0.0"
+    "@actions/core": "^1.8.2",
+    "@actions/github": "^5.0.3"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.13",
+    "@types/jest": "^27.5.1",
     "@types/node": "^12.0.4",
     "@zeit/ncc": "^0.21.1",
-    "jest": "^25.1.0",
-    "jest-circus": "^25.1.0",
-    "ts-jest": "^24.0.2",
-    "typescript": "^3.5.1"
+    "jest": "^28.1.0",
+    "jest-circus": "^28.1.0",
+    "ts-jest": "^28.0.2",
+    "typescript": "^4.6.4"
   }
 }
