--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
+    "format": "prettier --write '**/*.ts'",
+    "format-check": "prettier --check '**/*.ts'",
+    "lint": "eslint src/**/*.ts",
+    "package": "ncc build --source-map --license LICENSE",
     "test": "jest",
-    "package": "ncc build --source-map --license LICENSE"
+    "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
   },
   "repository": {
     "type": "git",
@@ -27,9 +31,14 @@
   "devDependencies": {
     "@types/jest": "^27.5.1",
     "@types/node": "^12.0.4",
-    "@zeit/ncc": "^0.21.1",
+    "@typescript-eslint/parser": "^5.25.0",
+    "@vercel/ncc": "^0.33.4",
+    "eslint": "^8.16.0",
+    "eslint-plugin-github": "^4.3.6",
+    "eslint-plugin-jest": "^26.2.2",
     "jest": "^28.1.0",
     "jest-circus": "^28.1.0",
+    "prettier": "^2.6.2",
     "ts-jest": "^28.0.2",
     "typescript": "^4.6.4"
   }
