--- a/action.yml
+++ b/action.yml
@@ -5,14 +5,14 @@ branding:
   icon: arrow-up
   color: gray-dark
 inputs:
-  initial_status:
+  initial-status:
     description: 'Initial status for the deployment. Can be one of: error, failure, inactive, in_progress, queued, pending, success'
     default: 'pending'
     required: false
   token:
     description: 'Github repository token'
     required: true
-  log_url:
+  log-url:
     description: 'Log URL location'
     required: false
   description:
@@ -22,10 +22,10 @@ inputs:
     description: 'The name of the environment for the deployment'
     default: 'production'
     required: false
-  environment_url:
+  environment-url:
     description: 'A URL to access your deployment'
     required: false
-  auto_merge:
+  auto-merge:
     description: Whether to attempt to auto-merge the default branch into the branch that the action is running on if set to "true". More details in the GitHub deployments API. Warning - setting this to "true" has caused this action to fail in some cases
     required: false
     default: 'false'
@@ -39,23 +39,25 @@ inputs:
     description: The name of the task for the deployment (e.g., deploy or deploy:migrations). More details in the GitHub deployments API.
     required: false
     default: 'deploy'
-  required_contexts:
+  required-contexts:
     description: 'If provided, must be formatted as a comma-separated string. The status contexts to verify against commit status checks. If you omit this parameter, GitHub verifies all unique contexts before creating a deployment. To bypass checking entirely, pass an empty array. Defaults to all unique contexts.'
     required: false
   payload:
     description: JSON payload with extra information about the deployment. Can be provided as a JSON string.
     required: false
-  transient_environment:
+  transient-environment:
     description: Specifies if the given environment is specific to the deployment and will no longer exist at some point in the future.
     required: false
     default: 'false'
-  production_environment:
+  production-environment:
     description: 'Specifies if the given environment is one that end-users directly interact with. Default: true when environment is production and false otherwise.'
     required: false
 
 outputs:
-  deployment_id:
+  deployment-id:
     description: 'The ID of the created deployment'
+  deployment-url:
+    description: 'The URL of the created deployment'
 
 runs:
   using: 'node16'
