--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: 'Deployment Action'
 description: 'Creates a GitHub Deployment'
-author: 'chrnorm'
+author: 'syrup-matrix'
 branding:
   icon: arrow-up
   color: gray-dark
